Added administrator in customer DB and supplier DB